// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog component opens the popover once trigger is clicked 1`] = `
@media  {
  .c-fDzwZw {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background: white;
    border: unset;
    border-radius: var(--radii-0);
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    justify-content: center;
    padding: unset;
    transition: all 100ms ease-out;
  }

  .c-dbrbZt {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-kijUtJ {
    background: white;
    border-radius: var(--radii-1);
    box-shadow: var(--shadows-3);
    box-sizing: border-box;
    left: 50%;
    max-width: 90vw;
    max-height: 90vh;
    overflow-y: scroll;
    padding: var(--space-5);
    position: fixed;
    top: 50%;
    transform: translate3d(-50%, -50%, 0);
    z-index: 2147483646;
  }

  .c-kijUtJ:focus {
    outline: none;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-kijUtJ[data-state="open"] {
      animation: k-iaWRFC 550ms cubic-bezier(0.22, 1, 0.36, 1);
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-kijUtJ[data-state="closed"] {
      animation: k-gturUW 550ms cubic-bezier(0.22, 1, 0.36, 1);
    }
}

  .c-gJNIBC {
    background-color: var(--colors-alpha600);
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    position: fixed;
    overflow-y: auto;
    z-index: 2147483646;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-gJNIBC[data-state="open"] {
      animation: k-eyOShd 250ms ease-out;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-gJNIBC[data-state="closed"] {
      animation: k-bHbNKp 550ms ease-out;
    }
}
}

@media  {
  .c-fDzwZw-PrXKS-size-lg {
    height: var(--sizes-4);
    width: var(--sizes-4);
  }

  .c-dbrbZt-hemXWm-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 2;
  }

  .c-kijUtJ-lgqbzh-size-sm {
    width: 480px;
  }
}

@media  {
  .c-fDzwZw-otpKd-cv {
    background: transparent;
    color: var(--colors-tonal300);
  }

  .c-fDzwZw-otpKd-cv:not(:disabled):hover,
  .c-fDzwZw-otpKd-cv:not(:disabled):focus {
    color: var(--colors-primaryMid);
  }

  .c-fDzwZw-otpKd-cv:not(:disabled):active {
    color: var(--colors-primaryDark);
  }

  .c-fDzwZw-otpKd-cv[disabled] {
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }
}

@media  {
  .c-fDzwZw-ikHqHwu-css {
    position: absolute;
    right: var(--space-4);
    top: var(--space-4);
  }

  .c-dbrbZt-ihFPSGE-css {
    height: 20px;
    width: 20px;
  }
}

<div
  aria-describedby="radix-5"
  aria-label="Dialog"
  class="c-kijUtJ c-kijUtJ-lgqbzh-size-sm"
  data-state="open"
  id="radix-3"
  role="dialog"
  style="pointer-events: auto;"
  tabindex="-1"
>
  <button
    aria-label="Close dialog"
    class="c-fDzwZw c-fDzwZw-PrXKS-size-lg c-fDzwZw-otpKd-cv c-fDzwZw-ikHqHwu-css"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="c-dbrbZt c-dbrbZt-hemXWm-size-md c-dbrbZt-ihFPSGE-css"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.343 6.343l11.314 11.314m-11.314 0L17.657 6.343"
      />
    </svg>
  </button>
  CONTENT
</div>
`;

exports[`Dialog component renders the trigger with the popover hidden by default 1`] = `
<div>
  <button
    aria-controls="radix-0"
    aria-expanded="false"
    aria-haspopup="dialog"
    data-state="closed"
    type="button"
  >
    TRIGGER
  </button>
</div>
`;

exports[`Dialog component without close button renders 1`] = `
@media  {
  .c-fDzwZw {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background: white;
    border: unset;
    border-radius: var(--radii-0);
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    justify-content: center;
    padding: unset;
    transition: all 100ms ease-out;
  }

  .c-dbrbZt {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-kijUtJ {
    background: white;
    border-radius: var(--radii-1);
    box-shadow: var(--shadows-3);
    box-sizing: border-box;
    left: 50%;
    max-width: 90vw;
    max-height: 90vh;
    overflow-y: scroll;
    padding: var(--space-5);
    position: fixed;
    top: 50%;
    transform: translate3d(-50%, -50%, 0);
    z-index: 2147483646;
  }

  .c-kijUtJ:focus {
    outline: none;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-kijUtJ[data-state="open"] {
      animation: k-iaWRFC 550ms cubic-bezier(0.22, 1, 0.36, 1);
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-kijUtJ[data-state="closed"] {
      animation: k-gturUW 550ms cubic-bezier(0.22, 1, 0.36, 1);
    }
}

  .c-gJNIBC {
    background-color: var(--colors-alpha600);
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    position: fixed;
    overflow-y: auto;
    z-index: 2147483646;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-gJNIBC[data-state="open"] {
      animation: k-eyOShd 250ms ease-out;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-gJNIBC[data-state="closed"] {
      animation: k-bHbNKp 550ms ease-out;
    }
}
}

@media  {
  .c-fDzwZw-PrXKS-size-lg {
    height: var(--sizes-4);
    width: var(--sizes-4);
  }

  .c-dbrbZt-hemXWm-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 2;
  }

  .c-kijUtJ-lgqbzh-size-sm {
    width: 480px;
  }
}

<div
  aria-describedby="radix-17"
  aria-label="Dialog"
  class="c-kijUtJ c-kijUtJ-lgqbzh-size-sm"
  data-state="open"
  id="radix-15"
  role="dialog"
  style="pointer-events: auto;"
  tabindex="-1"
>
  CONTENT
</div>
`;
